# flasky

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  celery_worker.py  config.py  docker-compose.yml  docs.md  flasky.code-workspace  main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: app-checkpoint.py
app/: __init__.py  celery_app.py  helper.py  models.py  routes.py  tasks.py
app/templates/email/: order_confirmation.html
flasky-frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  tailwindcss.Config  vite.config.js
flasky-frontend/src/: App.vue  main.js
flasky-frontend/src/router/: router.js
flasky-frontend/src/services/: api.js
flasky-frontend/src/views/: Home.vue  OrderDetail.vue  Orders.vue  Products.vue
instance/: inventory.db
nginx/: default.conf
tests/: conftest.py  test_order_process.py
